Fix footer alignment and insert icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -509,6 +509,14 @@ ul {
     background-color: aliceblue;
 }
 
+.red-text{
+    color: #d53a3a;
+}
+
+.green-text{
+    color: green;
+}
+
 .sig-orange {
     color: rgb(214, 195, 127);
 }
@@ -587,7 +595,7 @@ h2 i {
     display: none;
 }
 
-.image-3{
+.image-3, .image-3-2{
     border: 2px solid #470d1b;
 }
 
@@ -747,9 +755,9 @@ footer {
 }
 
 .social-item li a i:hover {
-    padding-right: 30px;
-    padding-left: 30px;
-    color: rgb(63, 218, 63);
+    padding-right: 15px;
+    padding-left: 15px;
+    color: #f98d1a;
     font-size: x-large;
     text-align: center;
 }
@@ -758,5 +766,13 @@ footer {
     width: 90%;
     padding-top: 30px;
     padding-bottom: 20px;
+}
 
+@media (max-width: 576px) {
+    .align-small{
+    text-align: center;}
+}
+
+footer p i {
+    color: #f98d1a;
 }
